# rustn2s

./: Cargo.toml  README.md
docs/: architecture.md  examples.md  improve.md  routing_improvement.md
src/: lib.rs  main.rs
src/analyzer/: mod.rs
src/eval/: bounding_box.rs  connectivity.rs  label_usage.rs  mod.rs  overlap.rs  power_convention.rs  score.rs  symmetry.rs  wire_bends.rs  wire_crossings.rs  wire_length.rs
src/export/: json.rs  kicad.rs  mod.rs  svg.rs
src/model/: geometry.rs  mod.rs  schematic.rs  symbol.rs
src/parser/: mod.rs
src/placer/: mod.rs
src/router/: mod.rs
tests/examples/: 01_voltage_divider.sp  02_rc_lowpass_filter.sp  03_halfwave_rectifier.sp  04_nmos_common_source.sp  05_nmos_current_mirror.sp  06_bjt_diff_pair.sp  07_two_stage_opamp.sp  08_bandgap_reference.sp  09_inverter_chain_hier.sp  10_opamp_feedback_hier.sp  11_rlc_controlled_sources.sp
