[package]
name = "n2s"
version = "0.1.0"
edition = "2021"
description = "Netlist to Schematic — convert SPICE netlists to visual schematics"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "n2s"
path = "src/lib.rs"

[[bin]]
name = "n2s"
path = "src/main.rs"

[[bin]]
name = "n2s-eval"
path = "src/bin/eval.rs"

[[bin]]
name = "n2s-improve"
path = "src/bin/improve.rs"
